examples/positive/L1/module_no_body.ob
MODULE M ;

  VAR a, b : INTEGER;

      p, q : BOOLEAN;

END M.
