examples/negative/parse_errors/L2/reserved_for.ob
MODULE ReservedFor;

VAR FOR: INTEGER;

END ReservedFor.
